--- a/telegraf.conf
+++ b/telegraf.conf
@@ -155,7 +155,6 @@
   ignore_fs = ["tmpfs", "devtmpfs", "devfs", "overlay", "aufs", "squashfs"]
 [[inputs.diskio]]
 [[inputs.mem]]
-[[inputs.net]]
 [[inputs.processes]]
 [[inputs.swap]]
 [[inputs.system]]
@@ -163,3 +162,6 @@
   commands = ["/usr/local/bin/cpu_temp_influx.sh"]
   timeout = "5s"
   data_format = "influx"
+[[inputs.kernel]]
+[[inputs.net]] fieldpass = ["bytes*"]
+[[inputs.netstat]]
