--- a/telegraf.conf
+++ b/telegraf.conf
@@ -122,22 +122,22 @@
   ## integer values.  Enabling this option will result in field type errors if
   ## existing data has been written.
   # influx_uint_support = false
-#[[outputs.influxdb_v2]]	
+[[outputs.influxdb_v2]]	
   ## The URLs of the InfluxDB cluster nodes.
   ##
   ## Multiple URLs can be specified for a single cluster, only ONE of the
   ## urls will be written to each interval.
   ## urls exp: http://127.0.0.1:9999
-#  urls = ["$INFLUX_URL"]
+  urls = ["$INFLUX_URL"]
 
   ## Token for authentication.
-#  token = "$INFLUX_TOKEN"
+  token = "$INFLUX_TOKEN"
 
   ## Organization is the name of the organization you wish to write to; must exist.
-#  organization = "home"
+  organization = "home"
 
   ## Destination bucket to write into.
-#  bucket = "machines"
+  bucket = "machines"
 [[inputs.cpu]]
   ## Whether to report per-cpu stats or not
   percpu = true
