add script to get number of users

--- a/telegraf.conf
+++ b/telegraf.conf
@@ -159,7 +159,10 @@
 [[inputs.swap]]
 [[inputs.system]]
 [[inputs.exec]]
-  commands = ["/usr/local/bin/cpu_temp_influx.sh"]
+  commands = [
+    "/usr/local/bin/cpu_temp_influx.sh",
+    "/usr/local/bin/n_user_influx.sh"
+  ]
   timeout = "5s"
   data_format = "influx"
 [[inputs.kernel]]
